[project]
name = "openstack-snapsentry"
version = "0.1.0"
description = "Automated Snapshot Management for Openstack Volumes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openstacksdk>=4.7.1",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "structlog>=25.4.0",
    "whenever>=0.9.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
]
